feat: ajout des donnés json, variables et images

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,8 @@
+@import "./utils/_variables.scss";
+
 * {
     padding: 0;
     margin: 0;
+    color: $color-primary;
+    font-family: $font-family;
 }
