--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,1 +1,1 @@
-*{padding:0;margin:0}/*# sourceMappingURL=main.css.map */
+*{padding:0;margin:0;color:#ff6060;font-family:Montserrat}/*# sourceMappingURL=main.css.map */
