--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,1 +1,1 @@
-*{padding:0;margin:0;color:#ff6060;font-family:Montserrat}/*# sourceMappingURL=main.css.map */
+*{padding:0;margin:0;color:#ff6060;font-family:Montserrat}body{max-width:1440px;margin:auto;background-color:gray}header{background-color:#fff;max-width:1240px;box-sizing:border-box;display:flex;flex-direction:row;justify-content:space-between}nav{height:68px;display:flex;flex-direction:row;align-items:center;gap:57px;font-size:24px}nav a{text-decoration:none}/*# sourceMappingURL=main.css.map */
