--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,8 +1,36 @@
-@import "./utils/_variables.scss";
+@import "./utils/variables";
+@import "./layouts/header";
 
 * {
     padding: 0;
     margin: 0;
     color: $color-primary;
     font-family: $font-family;
+}
+
+body {
+    max-width: 1440px;
+    margin: auto;
+    background-color: gray;
+}
+
+header {
+    background-color: white;
+    max-width: 1240px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;   
+}
+
+nav {
+    height: 68px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 57px;
+    font-size: 24px;
+    a {
+        text-decoration: none;
+    }
 }
