feat: ajout d'un footer responsive

--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -3,3 +3,8 @@ $color-primary: rgba(255, 96, 96, 1);
 
 // POLICES VARIABLES
 $font-family: 'Montserrat', sans-serif;
+
+// MEDIA QUERIES VARIABLES
+$breakpoints: (
+    mobile: 599px,
+); 
