--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,23 +1,24 @@
 @import "./utils/variables";
+@import "./utils/mixins";
 @import "./layouts/header";
 
 * {
     padding: 0;
     margin: 0;
-    color: $color-primary;
     font-family: $font-family;
 }
 
 body {
     max-width: 1440px;
     margin: auto;
+    font-size: 24px;
 }
 
 header {
     max-width: 1240px;
     box-sizing: border-box;
     margin: 0 auto;
-    padding-top: 50px;
+    padding-top: 40px;
     padding-bottom: 50px;
 }
 
@@ -35,10 +36,35 @@ nav {
     gap: 57px;
     font-size: 24px;
     a {
+        color: $color-primary; 
         text-decoration: none;
     }
     .current {
         text-decoration: underline;
         text-decoration-thickness: 1.5px;
+    }
+}
+
+footer {
+    margin-top: 50px;
+    background-color: black;
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    @include mobile-only {
+        padding: 70px 0;
+    }
+}
+
+.footer__content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 40px;
+    margin: auto;
+    @include mobile-only {
+        width: 120px;
+        font-size: 12px;
+        gap: 15px;
     }
 }
