--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -1,5 +1,7 @@
 // COLORS VARIABLES
-$color-primary: rgba(255, 96, 96, 1);
+$primary-color: rgba(255, 96, 96, 1);
+$secondary-color: rgba(246, 246, 246, 1);
+
 
 // POLICES VARIABLES
 $font-family: 'Montserrat', sans-serif;
