--- a/src/pages/A-Propos/apropos.module.scss
+++ b/src/pages/A-Propos/apropos.module.scss
@@ -30,61 +30,9 @@
 .txtContainer {
     position: relative;
     padding: 40px 100px;
-    // display: flex;
-    // flex-direction: column;
-    // gap: 30px;
-}
-
-.collapse {
-    position: relative;
-    box-sizing: border-box;
-    width: 100%;
-    img {
-        transform: rotate(0);
-        transition: 300ms ease-in-out;
-        position: absolute;
-        right: 10px;
-        top: 10px;
-    }
-}
-
-input {
-    z-index: 1;
-    opacity: 0;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-size: 50px;
-    height: 32px;
-    width: 32px;
-    &:checked + .detailsContainer {
-        transform: scale(1);
-    }
-}
-
-.labelContainer {
-    background-color: $primary-color;
-    box-sizing: border-box;
-    padding: 12px 15px;
-    height: 52px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-    color: white;
-    border-radius: 5px;    
+    flex-direction: column;
+    gap: 30px;
 }
 
-.detailsContainer {
-    padding: 20px;
-    background-color: $secondary-color;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    font-weight: 400;
-    font-size: 18px;
-    color: $primary-color;
-    line-height: 25.67px;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: 200ms ease-in-out;
-}
+
