--- a/src/pages/Error/error.module.scss
+++ b/src/pages/Error/error.module.scss
@@ -36,6 +36,7 @@
 .backLink {
     font-size: 18px;
     color: $primary-color;
+    padding-bottom: 40px;
     @include mobile-only {
         font-size: 14px;
     }
