--- a/src/components/collapse/collapse.module.scss
+++ b/src/components/collapse/collapse.module.scss
@@ -1,33 +1,65 @@
 @import "../../style/utils/variables";
 @import "../../style/utils/mixins";
 
-.collapse, .collapseOpen {
-    position: relative;
+
+.collapse {
+    &__Close, &__Open {
+        position: relative;
+        box-sizing: border-box;
+        width: 100%;        
+    }
+    &__Close {
+        height: 52px;   
+        animation: closing 400ms both ease-in-out;
+        animation-delay: 000ms;
+        @include mobile-only {
+            height: 30px;
+            animation: closingMobile 400ms both ease-in-out;
+            animation-delay: 000ms;
+        }
+    }   
+    &__Open {
+        height: auto;
+        animation: opening 200ms both ease-in;
+        animation-delay: 000ms;
+        animation-fill-mode: backwards;        
+    } 
+}
+
+
+/****************** CONTAINER OF CATEGORY *************/
+.categoryContainer {
+    background-color: $primary-color;
     box-sizing: border-box;
-    width: 100%;
-    img {
-        transform: rotate(0);
-        transition: 300ms ease-in-out;
-        position: absolute;
-        right: 10px;
-        top: 10px;
+    padding: 12px 15px;
+    height: 52px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    color: white;
+    border-radius: 5px;    
+    @include mobile-only {
+        height: 30px;
+        font-size: 13px;
+        padding: 6px 10px 5px 10px;
     }
 }
 
-.collapse {
-    height: 52px;   
-    animation: closing 400ms both ease-in-out;
-    animation-delay: 000ms;
-}
+.collapseArrow {
+    transform: rotate(0);
+    transition: 300ms ease-in-out;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    @include mobile-only {
+        top: 5px;
+        height: 25px;
+        width: 25px;
+    }
+}  
 
-.collapseOpen {
-    height: auto;
-    animation: opening 400ms both ease-in;
-    animation-delay: 000ms;
-    animation-fill-mode: backwards;
-}
-
-input {
+.collapseCheckbox {
     z-index: 1;
     opacity: 0;
     position: absolute;
@@ -42,21 +74,13 @@ input {
     &:not(:checked) + .detailsContainer p {
         opacity: 0;
     }
+    @include mobile-only {
+        top: 0px;
+    }
 }
 
-.labelContainer {
-    background-color: $primary-color;
-    box-sizing: border-box;
-    padding: 12px 15px;
-    height: 52px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-    color: white;
-    border-radius: 5px;    
-}
 
+/****************** CONTAINER OF DETAILS *************/
 .detailsContainer {
     padding: 20px;
     background-color: $secondary-color;
@@ -73,8 +97,13 @@ input {
         opacity: 1;
         transition: 200ms;
     }
+    @include mobile-only {
+        font-size: 12px;
+    }
 }
 
+
+/****************** OPEN AND CLOSE ANIMATIONS *************/
 @keyframes opening {
     0% {
         height: 52px; 
@@ -90,5 +119,14 @@ input {
     }
     100% {
         height: 52px;
+    }
+}
+
+@keyframes closingMobile {
+    0% {
+        height: 100px; 
+    }
+    100% {
+        height: 30px;
     }
 }
