--- a/src/pages/A-Propos/apropos.module.scss
+++ b/src/pages/A-Propos/apropos.module.scss
@@ -4,6 +4,9 @@
 .apropos__content {
     max-width: 1240px;
     margin: 0 auto;
+    @include mobile-only {
+        padding: 0 20px;
+    }
 }
 
 .imgContainer {
@@ -12,13 +15,19 @@
         width: 100%;
         height: 223px;     
         border-radius: 25px; 
+        @include mobile-only {
+            height: 111px;
+            border-radius: 10px;
+        }
     }
     &__img {
         position: absolute;
         top: 0;
         left: 0;
         background-image: url(../../assets/Image_source_2.png);
-        background-position: center;      
+        background-position: center;   
+        background-repeat: no-repeat;
+        background-size: cover;  
     }
     &__bg {
         position: relative;
@@ -29,8 +38,12 @@
 
 .txtContainer {
     position: relative;
-    padding: 40px 100px;
+    padding: 40px 100px 25px 100px;
     display: flex;
     flex-direction: column;
     gap: 30px;
+    @include mobile-only {
+        gap: 20px;
+        padding: 20px 0px 5px 0px;
+    }
 }
