--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,5 +11,9 @@ body {
     max-width: 1440px;
     margin: auto;
     font-size: 24px;
+    padding: 0 20px;
+    @include mobile-only {
+        padding: 0;
+    }
 }
 
