refactor: le style des imgContainer est regroupé dans une mixin "pagePresenttionImg"

--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,58 +1,14 @@
 @import "../../style/utils/variables";
 @import "../../style/utils/mixins";
 
+
 .home__content {
     max-width: 1240px;
     margin: 0 auto;
     @include mobile-only {
         padding: 0 20px;
     }
-}
-
-.imgContainer {
-    position: relative;
-    height: 223px;   
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    @include mobile-only {
-        height: 111px;
-        justify-content: left;
-    }   
-    &__img, &__bg {
-        width: 100%;
-        height: 100%;   
-        border-radius: 25px; 
-        @include mobile-only {
-            border-radius: 10px;
-        }
-    }
-    &__img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-image: url(../../assets/Image_source_1.png);
-        background-position: center;   
-        background-repeat: no-repeat;
-        background-size: cover;  
-    }
-    &__bg {
-        position: absolute;
-        background-color: rgba(0, 0, 0, 0.3);    
-    }
-    &__tag {
-        text-align: center;
-        position: absolute;
-        font-size: 48px;
-        font-weight: 500;
-        color: rgba(255, 255, 255, 1);
-        @include mobile-only {
-            text-align: left;
-            font-size: 24px;
-            padding-left: 20px;
-            width: 217px;
-        }
-    }
+    @include pagePresentationImg("../../assets/Image_source_1.png");
 }
 
 .txtContainer {
