--- a/src/pages/A-Propos/apropos.module.scss
+++ b/src/pages/A-Propos/apropos.module.scss
@@ -1,41 +1,14 @@
 @import "../../style/utils/variables";
 @import "../../style/utils/mixins";
 
+
 .apropos__content {
     max-width: 1240px;
     margin: 0 auto;
     @include mobile-only {
         padding: 0 20px;
     }
-}
-
-.imgContainer {
-    position: relative;
-    height: 223px;   
-    @include mobile-only {
-        height: 111px;
-    }    
-    &__img, &__bg {
-        width: 100%;
-        height: 100%;
-        border-radius: 25px; 
-        @include mobile-only {
-            border-radius: 10px;
-        }
-    }
-    &__img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-image: url(../../assets/Image_source_2.png);
-        background-position: center;   
-        background-repeat: no-repeat;
-        background-size: cover;  
-    }
-    &__bg {
-        position: relative;
-        background-color: rgba(0, 0, 0, 0.3);    
-    }
+    @include pagePresentationImg("../../assets/Image_source_2.png");
 }
 
 .txtContainer {
