--- a/src/style/utils/_mixins.scss
+++ b/src/style/utils/_mixins.scss
@@ -1,5 +1,56 @@
+// MEDIA QUERIES MIXINS
 @mixin mobile-only {
     @media all and (max-width: map-get($breakpoints, mobile)) {
         @content;
     }
+}
+
+
+// PAGE PRESENTATION IMAGE MIXIN
+@mixin pagePresentationImg ($imgSrc) {
+    .imgContainer {
+        position: relative;
+        height: 223px;   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include mobile-only {
+            height: 111px;
+            justify-content: left;
+        }   
+        &__img, &__bg {
+            width: 100%;
+            height: 100%;   
+            border-radius: 25px; 
+            @include mobile-only {
+                border-radius: 10px;
+            }
+        }
+        &__img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-image: url($imgSrc);
+            background-position: center;   
+            background-repeat: no-repeat;
+            background-size: cover;  
+        }
+        &__bg {
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.3);    
+        }
+        &__tag {
+            text-align: center;
+            position: absolute;
+            font-size: 48px;
+            font-weight: 500;
+            color: rgba(255, 255, 255, 1);
+            @include mobile-only {
+                text-align: left;
+                font-size: 24px;
+                padding-left: 20px;
+                width: 217px;
+            }
+        }
+    } 
 }
