feat: ajout de l'effet dégradé sur les cartes de locations.

--- a/src/pages/Home/lctCard.module.scss
+++ b/src/pages/Home/lctCard.module.scss
@@ -4,6 +4,7 @@
 
 .lctCard {
     background: $primary-color;
+    box-shadow: inset 0px -80px 100px -50px rgba(0, 0, 0, 0.5);
     height: 340px;
     width: 340px;
     border-radius: 10px;
