--- a/src/pages/Fiche-Logement/fLogement.module.scss
+++ b/src/pages/Fiche-Logement/fLogement.module.scss
@@ -53,3 +53,74 @@
         }
     }
 }
+
+.txtContainer {
+    position: relative;
+    padding: 30px 0 25px 0px;
+    color: $primary-color;
+    font-size: 18px;    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    @include mobile-only {
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 15px;
+        padding: 15px 0px 5px 0px;
+        font-size: 12px;
+    }
+    &__right {
+        text-align: end;
+        background-color: gray;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        @include mobile-only {
+            flex-direction: row-reverse;
+            justify-content: space-between;
+        }
+    }
+    &__left {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: 500;
+    @include mobile-only {
+        font-size: 18px;
+    }
+}
+
+.tagsContainer {
+    padding-top: 5px;
+    height: 25px;
+    background-color: $primary-color;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.profile {
+    display: flex;
+    // flex-direction: row;
+    // justify-content: center;
+    // align-items: center;
+    // flex-wrap: nowrap;
+    height: 64px;
+    width: 100px;
+}
+
+.profilPicture {
+    object-fit: cover;
+    height: 64px;
+    width: 64px;
+    clip-path: circle(50% at 50% 50%);
+    @include mobile-only {
+        height: 32px;
+        width: 32px;
+    }
+}  
