--- a/src/style/utils/_mixins.scss
+++ b/src/style/utils/_mixins.scss
@@ -39,7 +39,7 @@
             position: absolute;
             background-color: rgba(0, 0, 0, 0.3);    
         }
-        &__tag {
+        &__title {
             text-align: center;
             position: absolute;
             font-size: 48px;
