--- a/src/pages/Fiche-Logement/fLogement.module.scss
+++ b/src/pages/Fiche-Logement/fLogement.module.scss
@@ -32,7 +32,7 @@
         width: 100%;
         position: absolute;
         bottom: 25px;
-        font-size: 24px;
+        font-size: 18px;
         color: white;
         @include mobile-only {
             opacity: 0;
@@ -45,8 +45,13 @@
         justify-content: space-between;
         width: 100%;
         img {
+            transform: scale(1);
+            transition: 200ms ease-in-out;
             height: 79.2px;
             cursor: pointer;
+            &:active {
+                transform: scale(0.8);
+            }
             @include mobile-only {
                 height: 24px;
             }
