--- a/src/components/collapse/collapse.module.scss
+++ b/src/components/collapse/collapse.module.scss
@@ -40,20 +40,22 @@
     border-radius: 5px;    
     @include mobile-only {
         height: 30px;
-    }
-    .littleLabel, .bigLabel {
+    } 
+    .littleLabel {
+        font-size: 18px;
+        padding: 15px;
         @include mobile-only {
             font-size: 13px;
             padding: 6px 10px 5px 10px;
         }
-    }    
-    .littleLabel {
-        font-size: 18px;
-        padding: 15px;
     }
     .bigLabel {
         font-size: 24px;
         padding: 12px 15px;
+        @include mobile-only {
+            font-size: 13px;
+            padding: 6px 10px 5px 10px;
+        }
     }
 }
 
@@ -64,7 +66,7 @@
     right: 10px;
     top: 10px;
     @include mobile-only {
-        top: 5px;
+        top: 0px;
         height: 25px;
         width: 25px;
     }
