feat: le carousel est dynamique et fonctionnel. feat: le titre du document se met à jour selon la page.

--- a/src/pages/Error/error.module.scss
+++ b/src/pages/Error/error.module.scss
@@ -37,6 +37,7 @@
     font-size: 18px;
     color: $primary-color;
     padding-bottom: 40px;
+    text-decoration: underline;
     @include mobile-only {
         font-size: 14px;
     }
