--- a/src/pages/Fiche-Logement/profile.module.scss
+++ b/src/pages/Fiche-Logement/profile.module.scss
@@ -7,7 +7,7 @@
     width: 200px;
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     gap: 15px;
     @include mobile-only {
