feat: ajout d'une animation au survol des cartes logement et d'un pointer sur les flèches des collapses.

--- a/src/components/collapse/collapse.module.scss
+++ b/src/components/collapse/collapse.module.scss
@@ -81,6 +81,7 @@
     font-size: 50px;
     height: 32px;
     width: 32px;
+    cursor: pointer;
     &:checked + .detailsContainer {
         transform: scale(1);
     }
