--- a/src/pages/Home/lctCard.module.scss
+++ b/src/pages/Home/lctCard.module.scss
@@ -9,6 +9,13 @@
     width: 340px;
     border-radius: 10px;
     box-sizing: border-box;
+    opacity: 1;
+    transform: scale(1);
+    transition: all ease-in-out 400ms;
+    &:hover {
+        opacity: 0.8;
+        transform: scale(0.99);
+    }
     @include mobile-only {
         height: 255px;
         width: 100%;
